<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/fondo2"
    tools:context=".fragments.reading.ReadingSystemFragment">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        tools:layout_editor_absoluteX="1dp"
        tools:layout_editor_absoluteY="1dp"
        tools:ignore="MissingConstraints,UselessParent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="45dp"
            android:background="@color/not_use_space"
            android:orientation="vertical">

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">

            <!-- ORRIAREN GOIBURUA -->
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="107dp"
                android:orientation="horizontal">

                <Button
                    android:id="@+id/btnLogOut"
                    android:layout_width="100dp"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:backgroundTint="@color/border_blue"
                    android:layout_marginStart="15dp"
                    android:text="@string/btn_LOut" />

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="95dp"
                    android:gravity="center"
                    android:orientation="vertical">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:gravity="center"
                        android:text="@string/reading_stats_title"
                        android:textColor="#031264"
                        android:textSize="32sp"
                        android:textStyle="bold" />

                </LinearLayout>

            </LinearLayout>

            <!-- ORRIAREN RATING EREMUA -->
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="304dp"
                android:baselineAligned="false"
                android:gravity="center"
                android:orientation="horizontal">

                <LinearLayout
                    android:layout_width="0dp"
                    android:layout_height="266dp"
                    android:layout_weight="1"
                    android:orientation="horizontal"
                    tools:ignore="UselessParent">

                    <ImageView
                        android:layout_width="200dp"
                        android:layout_height="255dp"
                        android:layout_gravity="center"
                        android:contentDescription="@string/img_stars"
                        android:src="@drawable/stars">

                    </ImageView>

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:orientation="vertical">

                        <TextView
                            android:id="@+id/txtStar1"
                            android:gravity="center"
                            android:layout_width="match_parent"
                            android:layout_height="50dp"
                            android:textSize="18sp"
                            android:textStyle="bold"
                            android:text="@string/hint_1star"/>

                        <TextView
                            android:id="@+id/txtStar2"
                            android:gravity="center"
                            android:layout_width="match_parent"
                            android:layout_height="50dp"
                            android:textSize="18sp"
                            android:textStyle="bold"
                            android:text="@string/hint_2star">

                        </TextView>

                        <TextView
                            android:id="@+id/txtStar3"
                            android:gravity="center"
                            android:layout_width="match_parent"
                            android:layout_height="50dp"
                            android:textSize="18sp"
                            android:textStyle="bold"
                            android:text="@string/hint_3star">

                        </TextView>

                        <TextView
                            android:id="@+id/txtStar4"
                            android:gravity="center"
                            android:layout_width="match_parent"
                            android:layout_height="50dp"
                            android:textSize="18sp"
                            android:textStyle="bold"
                            android:text="@string/hint_4star">

                        </TextView>

                        <TextView
                            android:id="@+id/txtStar5"
                            android:gravity="center"
                            android:layout_width="match_parent"
                            android:layout_height="50dp"
                            android:textSize="18sp"
                            android:textStyle="bold"
                            android:text="@string/hint_5star">

                        </TextView>
                    </LinearLayout>
                </LinearLayout>

            </LinearLayout>

            <!-- SEARCH BOOK ITEMS -->
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="horizontal"
                android:gravity="center">

                <androidx.cardview.widget.CardView
                    android:layout_width="350dp"
                    android:layout_height="238dp"
                    app:cardUseCompatPadding="true">

                    <LinearLayout
                        android:layout_width="345dp"
                        android:layout_height="230dp"
                        android:background="@drawable/border"
                        android:gravity="center"
                        android:orientation="vertical"
                        >

                        <!-- Contenedor de User -->
                        <LinearLayout
                            android:layout_width="wrap_content"
                            android:layout_height="45dp"
                            android:background="@drawable/spinner_background"
                            android:gravity="center"
                            android:orientation="horizontal">

                            <Spinner
                                android:id="@+id/spinnerStars"
                                android:layout_width="250dp"
                                android:layout_height="wrap_content" />

                        </LinearLayout>

                        <!-- Contenedor de Pass -->
                        <LinearLayout
                            android:layout_width="wrap_content"
                            android:layout_height="60dp"
                            android:layout_marginTop="6dp"
                            android:gravity="center"
                            android:orientation="horizontal">

                            <com.google.android.material.textfield.TextInputLayout
                                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                                android:layout_width="250dp"
                                android:layout_height="60dp"
                                android:hint="@string/hint_new_value"
                                app:endIconDrawable="@drawable/ic_clear"
                                app:endIconMode="clear_text">

                                <com.google.android.material.textfield.TextInputEditText
                                    android:id="@+id/editTextValue"
                                    android:layout_width="250dp"
                                    android:layout_height="match_parent"
                                    android:inputType="text" />

                            </com.google.android.material.textfield.TextInputLayout>

                        </LinearLayout>

                        <!-- Contenedor de Button Google -->
                        <LinearLayout
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_marginTop="6dp"
                            android:gravity="center"
                            android:orientation="horizontal">

                            <Button
                                android:id="@+id/btnEditValue"
                                android:layout_width="match_parent"
                                android:layout_height="wrap_content"
                                android:layout_marginTop="8dp"
                                android:backgroundTint="@color/border_blue"
                                android:text="@string/edit_value"
                                android:textColor="@android:color/white"
                                app:cornerRadius="4dp" />

                        </LinearLayout>

                    </LinearLayout>
                </androidx.cardview.widget.CardView>

            </LinearLayout>
        </LinearLayout>

    </LinearLayout>

</FrameLayout>