<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/fondo2"
    tools:context=".fragments.books.BookInfoFragment">

    <!-- Status bar -->
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="45dp"
        android:background="@color/not_use_space"
        android:orientation="vertical" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:padding="16dp"
        android:paddingTop="56dp">

        <!-- HEADER -->
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:gravity="center_vertical"
            android:layout_marginBottom="24dp"
            android:layout_marginTop="30dp">

            <Button
                android:id="@+id/btnBack"
                android:layout_width="100dp"
                android:layout_height="wrap_content"
                android:backgroundTint="@color/border_blue"
                android:text="@string/btn_LOut" />

            <LinearLayout
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:orientation="vertical"
                android:gravity="center"
                android:layout_marginStart="16dp">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/book_info_title"
                    android:textColor="#031264"
                    android:textSize="30sp"
                    android:textStyle="bold" />
            </LinearLayout>
        </LinearLayout>

        <!-- BARRA DE BÚSQUEDA -->
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:orientation="horizontal"
            android:layout_marginBottom="24dp">

            <SearchView
                android:id="@+id/text"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@drawable/border"
                android:queryHint="@string/hint_search_book_titel"
                android:iconifiedByDefault="false" />
        </LinearLayout>

        <!-- RECYCLERVIEW -->
        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/recyclerviewWScontents"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1"
            app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager" />
    </LinearLayout>
</FrameLayout>